changed employee registeration header

--- a/templates/EmployeeReg.html
+++ b/templates/EmployeeReg.html
@@ -6,7 +6,8 @@ HR Signup
 
 {% block body %}
 <div class="container">
-<h1 style="color:blue;text-align: center;">Existing User Signup Here</h1>
+<h1 style="color:blue;text-align: center;">Employee Online Portal Sign Up</h1>
+<h4 style="color:blue;text-align: center;">(only for existing employees)</h4>
 
 <form action="/EmployeeReg" method="POST">
     
