updated UI - Personal details insert
Updated html tags and and data fetch for create personal details

--- a/templates/CreateEmpPersonaldata.html
+++ b/templates/CreateEmpPersonaldata.html
@@ -121,11 +121,7 @@
                 <br>
                 <form action="" method="post">
                     
-                    <div class="mb-2">
-                        <label for="emp_pid" class="form-label">Employee Personal ID</label>
-                        <input type="number" class="form-control" id="emp_pid" name = "emp_pid" aria-describedby="emailHelp" required>
-                    </div>
-
+                  
                     <div class="mb-2">
                         <label for="empid" class="form-label">Employee ID</label>
                         <input type="number" class="form-control" id="empid" name = "empid" aria-describedby="emailHelp" required>
@@ -180,6 +176,68 @@
                       <label for="bloddgrp" class="form-label">Blood Group</label>
                       <input type="text" class="form-control" id="bloddgrp"  name ="bloddgrp" aria-describedby="emailHelp" required>
                     </div>
+
+                    <div class="mb-2">
+                      <label for="addr1sn" class="form-label">Address Line 1 Street Name</label>
+                      <input type="text" class="form-control" id="addr1sn"  name ="addr1sn" aria-describedby="emailHelp" required >
+                    </div>
+
+                  <div class="mb-2">
+                      <label for="ad1bldname" class="form-label">Address Line 1 Building Name </label>
+                      <input type="text" class="form-control" id="ad1bldname"  name ="ad1bldname" aria-describedby="emailHelp" required >
+                  </div>
+  
+                  <div class="mb-2">
+                      <label for="ad1house" class="form-label">Address Line 1 House no.</label>
+                      <input type="text" class="form-control" id="ad1house"  name ="ad1house" aria-describedby="emailHelp" required >
+                  </div>
+
+                  <div class="mb-2">
+                      <label for="ad1city" class="form-label">Address Line 1 City</label>
+                      <input type="text" class="form-control" id="ad1city"  name ="ad1city" aria-describedby="emailHelp" >
+                  </div>
+
+                  <div class="mb-2">
+                    <label for="ad1plz" class="form-label">Address Line 1 Postcode</label>
+                    <input type="text" class="form-control" id="ad1plz"  name ="ad1plz" aria-describedby="emailHelp">
+                  </div>
+
+                  <div class="mb-2">
+                     <label for="ad1country" class="form-label">Address Line 1 Country</label>
+                     <input type="text" class="form-control" id="ad1country"  name ="ad1country" aria-describedby="emailHelp" >
+                  </div>
+
+
+                  <div class="mb-2">
+                    <label for="addr2sn" class="form-label">Address Line 2 Street Name</label>
+                    <input type="text" class="form-control" id="addr2sn"  name ="addr2sn" aria-describedby="emailHelp" required >
+                </div>
+
+                <div class="mb-2">
+                    <label for="ad2bldname" class="form-label">Address Line 2 Building Name </label>
+                    <input type="text" class="form-control" id="ad2bldname"  name ="ad2bldname" aria-describedby="emailHelp" required >
+                </div>
+
+                <div class="mb-2">
+                    <label for="ad2house" class="form-label">Address Line 2 House no.</label>
+                    <input type="text" class="form-control" id="ad2house"  name ="ad2house" aria-describedby="emailHelp" required >
+                </div>
+
+                <div class="mb-2">
+                    <label for="ad2city" class="form-label">Address Line 2 City</label>
+                    <input type="text" class="form-control" id="ad2city"  name ="ad2city" aria-describedby="emailHelp" >
+                </div>
+
+                <div class="mb-2">
+                  <label for="ad2plz" class="form-label">Address Line 2 Postcode</label>
+                  <input type="text" class="form-control" id="ad2plz"  name ="ad2plz" aria-describedby="emailHelp">
+                </div>
+
+                <div class="mb-2">
+                   <label for="ad2country" class="form-label">Address Line 2 Country</label>
+                   <input type="text" class="form-control" id="ad2country"  name ="ad2country" aria-describedby="emailHelp" >
+                </div>
+  
 
                     
 
