changes to the HRDashboard

--- a/templates/HRDashboard.html
+++ b/templates/HRDashboard.html
@@ -18,65 +18,21 @@
 				</span>
 				<h1 class="logo-title">
 					<span>TEAM D</span>
-					<span>HRM</span>
+					<span>User 1</span>
 				</h1>
 			</div>
 		</div>
-		<div class="app-header-navigation">
-			<div class="tabs">
-				<a href="#">
-					Overview
-				</a>
-				<a href="#" class="active">
-					Applications
-				</a>
-				<a href="#">
-					Employees
-				</a>
-				<a href="#">
-					Screenings
-				</a>
-				<a href="#">
-					Job openings
-				</a>
-				<a href="#">
-					Manage holidays
-				</a>
-			</div>
-		</div>
-		<div class="app-header-actions">
-			<button class="user-profile">
-				<span>HR-Adithya</span>
-				<span>
-					<img src="2.jpg">
-				</span>
-			</button>
-			<div class="app-header-actions-buttons">
-				<button class="icon-button large">
-					<i class="ph-magnifying-glass"></i>
-				</button>
-				<button class="icon-button large">
-					<i class="ph-bell"></i>
-				</button>
-			</div>
-		</div>
-		<div class="app-header-mobile">
-			<button class="icon-button large">
-				<i class="ph-list"></i>
-			</button>
-		</div>
-
 	</header>
 	<div class="app-body">
 		<div class="app-body-navigation">
 			<nav class="navigation">
-				<a href="#">
+				<a href="../CreateEmpRecord">
 					<i class="ph-browsers"></i>
-					<span>Dashboard</span>
+					<span>Create Employee</span>
 				</a>
 				<a href="../DisplayEmpInfo">
 					<i class="ph-check-square"></i>
-					<span>Employees</span>
+					<span>Employees Search</span>
 				</a>
 				<a href="../EmployeeAppraisal">
 					<i class="ph-swap"></i>
@@ -108,38 +64,17 @@
 		<div class="app-body-main-content">
 			<section class="Shortcuts">
 				<h2>Shortcuts</h2>
-				<div class="Shortcuts-header">
-					<div class="search-field">
-						<i class="ph-magnifying-glass"></i>
-						<input type="text" placeholder="Widgets">
-					</div>
-					<div class="dropdown-field">
-						<select>
-							<option>Personal</option>
-							<option>Employees</option>
-						</select>
-						<i class="ph-caret-down"></i>
-					</div>
-					<button class="flat-button">
-						Search
-					</button>
-				</div>
-				<div class="mobile-only">
-					<button class="flat-button">
-						Toggle search
-					</button>
-				</div>
 				<div class="tiles">
 					<article class="tile">
 						<div class="tile-header">
 							<i class="ph-bell"></i>
 							<h3>
-								<span>Calender</span>
-								<span>Meetings</span>
+								<span>Employee</span>
+								<span>Create</span>
 							</h3>
 						</div>
-						<a href="#">
-							<span>Go Calender</span>
+						<a href="../CreateEmpRecord">
+							<span>Go to Create Employees</span>
 							<span class="icon-button">
 								<i class="ph-caret-right-bold"></i>
 							</span>
@@ -149,12 +84,12 @@
 						<div class="tile-header">
 							<i class="ph-file-light"></i>
 							<h3>
-								<span>Employees</span>
-								<span>Information</span>
+								<span>Appraisal</span>
+								<span>View</span>
 							</h3>
 						</div>
-						<a href="#">
-							<span>Go to Employees</span>
+						<a href="../EmpAppraisalView">
+							<span>Go to Appraisal</span>
 							<span class="icon-button">
 								<i class="ph-caret-right-bold"></i>
 							</span>
@@ -164,14 +99,29 @@
 						<div class="tile-header">
 							<i class="ph-file-light"></i>
 							<h3>
-								<span>Reports</span>
-								<span>....</span>
+								<span>Leave</span>
+								<span>type edit</span>
 							</h3>
 						</div>
-						<a href="#">
-							<span>Go to Reports</span>
+						<a href="../LeaveType">
+							<span>Go to Leave Types</span>
 							<span class="icon-button">
 								<i class="ph-caret-right-bold"></i>
+							</span>
+						</a>
+					</article>
+					<article class="tile">
+						<div class="tile-header">
+							<i class="ph-file-light"></i>
+							<h3>
+								<span>Payroll</span>
+								<span>view</span>
+							</h3>
+						</div>
+						<a href="../EmpAppraisalView">
+							<span>Go to Payroll</span>
+							<span class="icon-button">
+								<i class="ph-file-light"></i>
 							</span>
 						</a>
 					</article>
