HTML tags updated for edit page
HTML tags updated for edit page

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -126,8 +126,8 @@
                 </div>
 
                 <div class="mb-2">
-                    <label for="Job_ID" class="form-label">Job Id</label>
-                    <input type="text" class="form-control" id="Job_ID" name = "Job_ID" aria-describedby="emailHelp" required value="{{data.Job_ID}}"></input>
+                    <label for="jobid" class="form-label">Job Id</label>
+                    <input type="text" class="form-control" id="jobid" name = "jobid" aria-describedby="emailHelp" required value="{{data.Job_ID}}"></input>
                 </div>
                 
                 <div class="mb-2">
