cleanup and comments

--- a/templates/Emp_Details_Editable.html
+++ b/templates/Emp_Details_Editable.html
@@ -95,7 +95,7 @@
   </nav>  -->
   
   <article>
-    <!-- {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages() %}
  
     {% if messages %}
 
@@ -108,7 +108,7 @@
     </div>
     {% endfor %}
     {% endif %}
-    {% endwith %} -->
+    {% endwith %}
     
     <div class = "container mt-3">
 
