--- a/templates/CreateJob.html
+++ b/templates/CreateJob.html
@@ -90,9 +90,9 @@
 
   <nav>
     <ul>
-      <li><a href="DisplayJobData" style="background-color:fuchsia;">Display</a></li>
-      <li><a href="UpdateJob.html" style="background-color:green;">Update</a></li>
-      <li><a href="DeleteJobData" style="background-color:grey;">Delete</a></li>
+      <li><a href="DisplayJobData" style="background-color:#777;">Display</a></li><br>
+      <li><a href="UpdateJob" style="background-color:#777;">Update</a></li><br>
+      <li><a href="DeleteJobData" style="background-color:#777;">Delete</a></li><br>
       <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
