--- a/templates/DeleteDeptData.html
+++ b/templates/DeleteDeptData.html
@@ -90,9 +90,9 @@
 
   <nav>
     <ul>
-      <li><a href="DisplayDeptData" style="background-color:fuchsia;">Display</a></li>
-      <li><a href="CreateDeptData" style="background-color:green;">Create</a></li>
-      <li><a href="UpdateDeptData" style="background-color:grey;">Update</a></li>
+      <li><a href="DisplayDeptData" style="background-color:#777;">Display</a></li><br>
+      <li><a href="CreateDeptData" style="background-color:#777;">Create</a></li><br>
+      <li><a href="UpdateDeptData" style="background-color:#777;">Update</a></li><br>
       <li><a class="btn btn-primary" href="logout" role="button"> &nbsp;Logout&nbsp;&nbsp;&nbsp;</a></a></li>
     </ul>
   </nav> 
