Added navigation from HR Dashboard to payroll, job, department

--- a/templates/HRDashboard.html
+++ b/templates/HRDashboard.html
@@ -50,13 +50,13 @@
 					<i class="ph-file-text"></i>
 					<span>Timesheets</span>
 				</a>
-				<a href="#">
+				<a href="../DisplayFinanceData">
 					<i class="ph-globe"></i>
 					<span>Billing and invoice</span>
 				</a>
-				<a href="#">
+				<a href="../DisplayJobData">
 					<i class="ph-clipboard-text"></i>
-					<span>Jobs/openings</span>
+					<span>Jobs</span>
 				</a>
 			</nav>
 			
@@ -118,8 +118,23 @@
 								<span>view</span>
 							</h3>
 						</div>
-						<a href="../EmpAppraisalView">
+						<a href="../DisplayFinanceData">
 							<span>Go to Payroll</span>
+							<span class="icon-button">
+								<i class="ph-file-light"></i>
+							</span>
+						</a>
+					</article>
+					<article class="tile">
+						<div class="tile-header">
+							<i class="ph-file-light"></i>
+							<h3>
+								<span>Department</span>
+								<span>view</span>
+							</h3>
+						</div>
+						<a href="../DisplayDeptData">
+							<span>Go to Department</span>
 							<span class="icon-button">
 								<i class="ph-file-light"></i>
 							</span>
